<resources>
    <string name="app_name">AlterCard</string>
    <string name="add_new_card">Add</string>
    <string name="hint_card_name">Card name</string>
    <string name="hint_card_number">Card number</string>
    <string name="button_add">Add</string>
    <string name="button_scan">Scan card</string>
    <string name="barcode_image">Barcode image</string>
    <string name="action_delete">Delete</string>
    <string name="action_rename">Rename</string>
    <string name="action_change_number">Change number</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_card">Add card</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_manual_input">Enter manually</string>
    <string name="button_scan_from_file">From file</string>
    <string name="scanner_prompt">Place the barcode in the center of the frame</string>
    <string name="action_navigate_back">Back</string>
    <string name="toast_camera_permission">Camera permission is required to scan barcodes</string>
    <string name="toast_barcode_error">Error generating barcode</string>
    <string name="action_change_color">Change logo color</string>
    <string name="color_option_default">Default</string>
    <string name="color_option_background">Logo background color</string>
    <string name="color_option_text">Symbol color</string>
    <string name="button_apply">Apply</string>
    <string name="action_sync">Sync</string>
    <string name="dialog_sync_title">Google Drive sync</string>
    <string name="dialog_sync_message">Sign in to Google to automatically back up your cards to Google Drive and sync across devices.</string>
    <string name="dialog_sync_sign_in">Sign in</string>
    <string name="dialog_sync_skip">Skip</string>
    <string name="toast_sync_success">Sync complete</string>
    <string name="toast_sign_in_failed">Sign-in failed. Please try again.</string>
    <string name="delete_card_title">Delete card</string>
    <string name="delete_card_message">Are you sure you want to delete this card? This action cannot be undone.</string>
    <string name="action_support">Support the project</string>
    <string name="error_not_signed_in">Not signed in to Google</string>
    <string name="support_dialog_title">Support the project</string>
    <string name="support_option_bmac">Buy Me a Coffee</string>
    <string name="support_option_boosty">Boosty</string>
</resources>
