<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.camera.view.PreviewView
        android:id="@+id/preview_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <View
        android:id="@+id/scanner_frame"
        android:layout_width="280dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/scanner_overlay_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/scanner_frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/scanner_overlay_color"
        app:layout_constraintTop_toBottomOf="@id/scanner_frame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/scanner_overlay_color"
        app:layout_constraintTop_toTopOf="@id/scanner_frame"
        app:layout_constraintBottom_toBottomOf="@id/scanner_frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/scanner_frame" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/scanner_overlay_color"
        app:layout_constraintTop_toTopOf="@id/scanner_frame"
        app:layout_constraintBottom_toBottomOf="@id/scanner_frame"
        app:layout_constraintStart_toEndOf="@id/scanner_frame"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/scanner_overlay"
        app:layout_constraintTop_toTopOf="@id/scanner_frame"
        app:layout_constraintBottom_toBottomOf="@id/scanner_frame"
        app:layout_constraintStart_toStartOf="@id/scanner_frame"
        app:layout_constraintEnd_toEndOf="@id/scanner_frame" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:baselineAligned="false"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/button_cancel"
            style="@style/RoundedOutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:minLines="2"
            android:text="@string/button_cancel" />

        <Button
            android:id="@+id/button_manual_input"
            style="@style/RoundedOutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:minLines="2"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/button_manual_input" />

        <Button
            android:id="@+id/button_scan_from_file"
            style="@style/RoundedOutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:minLines="2"
            android:text="@string/button_scan_from_file" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>